# microscopemetrics-dashboard

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
dashboard-folder/: app.py  pyproject.toml
src/dashboard/: app.py
src/dashboard/assets/css/: style.css
src/dashboard/pages/: authentification.py  globalView.py  key_measurment_foi.py  layoutTemp.py  notebook_test.ipynb  psf_dashboard.py  sideBar.py  testPage.py  test_dash.py  underconstruction.py
src/data/examples/: FieldIlluminationDataset-001 (1).yaml  FieldIlluminationDataset-001 (3).yaml  FieldIlluminationDataset-001.yaml
src/data_sources/: __init__.py  test_data_source.py  tools.py
